initial watchface manager

--- a/watchface_manager/pubspec.yaml
+++ b/watchface_manager/pubspec.yaml
@@ -4,12 +4,18 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  xml2json: ^6.2.2
+
+  xml: ^6.5.0
+
+  path_provider:
 
 dev_dependencies:
   flutter_test:
